# vss-benchmarks

./: .gitmodules  README.md  pyproject.toml
analysis/: arxiv_range_query_distances.py  arxiv_range_selectivity.json  arxiv_range_selectivity.py  arxiv_update_date_order.py  benchmark_arxiv.py  common.py  index_creation.ipynb  index_filtered_search_arxiv.ipynb  index_filtered_search_arxiv_blob.ipynb  index_filtered_search_cohere_blob.ipynb  index_filtered_search_selectivity.ipynb  index_filtered_search_selectivity_blob.ipynb  index_search.ipynb  index_search_blob.ipynb  index_search_blob_arxiv_pdxearch.ipynb  index_search_cohere6m_blob.ipynb  index_size.ipynb  plot_two_stacked_bars.ipynb
analysis/benchmark_summaries/: benchmark_summary_arxiv_PDXEARCH_20260320_131037.csv  benchmark_summary_arxiv_PDXEARCH_20260320_131250.csv
experiments/: docker-compose.yml  index_creation.py  index_creation_pgvector.py  index_filtered_search_arxiv.py  index_filtered_search_arxiv_pgvector.py  index_filtered_search_cohere.py  index_filtered_search_selectivity.py  index_filtered_search_selectivity_pgvector.py  index_search.py  index_search_pgvector.py  postgresql.conf  utils.py
utils/: arxiv-for-fanns-ground-truth.py  arxiv-for-fanns-pca.py  compute_neighbors.py  extract-predicate-attrs.py  extract-train-labels.py  filter_train.py  ground_truth_json_to_vectordbbench-parquet.py  hdf5-to-test-dataset-parquet.py  hdf5-to-vectordbbench-parquet.py  parquet-to-vectordbbench-parquet.py  remap_arxiv_files.py  sample_embeddings.py
utils/CustomArxivDataset/: shuffle_arxiv.py  (+1 more)
(+5258 files in other folders)
