[project]
name = "vss-benchmarks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb==1.4.4",
    "h5py>=3.15.1",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pyarrow>=19.0.0",
    "tqdm>=4.67.1",
    "vectordb-bench[duckdb]",
]

[tool.uv.sources]
vectordb-bench = { path = "vectordbbench", editable = true }
